2004-10-31  Aaron Stone  <aaron@serendipity.cx>

        * user.c (do_delete): now deletes aliases belonging to a user
        before the user is deleted; the prototype to the function now
        includes useridnr.
	* maintenance.c: -q quiet flag is respected.

2004-10-25  Paul Stevens <paul@nfg.nl>

	* db.c,dbsearch.c: stripped redundant unique_id<>'' from the queries. 
	* dbmail-imapsession.c, dbmail-imapsession.h, imap4.c, imapcommands.c,
	imaputil.c: _ic_fetch split up. 
	* db.c, create_tables(_innoDB).(p/my)sql: db_getmailbox speedup.
	* mysql/dbmysqldb.c: db_get_result speedup (MR).

2004-10-21  Paul Stevens <paul@nfg.nl>
	
	* Makefile.am, dbmail-imapsession.c, dbmail-imapsession.h, imap4.c,
	imap4.h, imapcommands.c, imapcommands.h, imaputil.c, imaputil.h:
	adding support for ImapSession as first phase of the imapcommands.c
	cleanup.

2004-10-14  Paul Stevens <paul@nfg.nl>

	* acconfig.h: removed.
	* acinclude.m4: applied Gerrit Haase's cleanup patch.
	* Makefile.in, config.in, configure, aclocal.m4: rerun of autoreconf.

2004-10-13  Paul Stevens <paul@nfg.nl>

	* dbmail-message.c: convert all messages to crlf->lf before insertion.
	* imaputil.c,imaputil.h (dbmail_imap_astring_as_string,
	dbmail_imap_plist_as_string): return char * instead of GString *.
	* imapcommands.c: some further cleanups of _ic_list. Also fixed
	signedness in calls to perform_imap_search.

2004-10-13  Ilja Booij  <ilja@ic-s.nl>

	* INSTALL.postfix: fixed typo. (closes #101).
	* db.c (db_createsession): adjusted a useful comment line.

2004-10-12  Paul Stevens <paul@nfg.nl>

	* Makefile.in, aclocal.m4, configure: updating the autotools generated
	files.
	* db.c, imapcommands.c, imaputil.h, dbmailtypes.h: cleanup in _ic_list 
	which cuts the number of queries by three.
	* dbmail-message.c: some string cleanups.
	* db.c (db_list_mailboxes_by_regex): removed redundant trace calls.

2004-10-06  Paul Stevens <paul@nfg.nl>

	* dbmsgbuf.c (db_update_msgbuf): fix off-by-one error.
