@@ -77,5 +77,20 @@ TRACE_LEVEL=5
 MINSPARECHILDREN=10
 MAXSPARECHILDREN=20
 
+[TIMSIEVED]
+EFFECTIVE_USER=nobody
+EFFECTIVE_GROUP=nogroup
+BINDIP=*
+NCHILDREN=2
+MAXCHILDREN=30
+MAXCONNECTS=10000
+MINSPARECHILDREN=5
+MAXSPARECHILDREN=5
+TIMEOUT=4000
+BINDIP=*
+PORT=20000
+RESOLVE_IP=yes
+TIMS_BEFORE_SMTP=yes
+
 # end of configuration file
 
